# MiniSPD

./: .gitignore  CMakeLists.txt  README.md  SetEnv.sh
TMillepede/: CMakeLists.txt  TMillepede.cxx  TMillepede.h  TMillepedeLinkDef.h
bmndata/: BmnDataLinkDef.h  BmnEnums.h  BmnEventHeader.h  BmnMath.cxx  BmnMath.h  CMakeLists.txt  db_structures.h
bmndata/digits/: BmnDchDigit.cxx  BmnDchDigit.h  BmnGemStripDigit.cxx  BmnGemStripDigit.h  BmnSiliconDigit.cxx  BmnTDCDigit.h
cmake/modules/: FindFairRoot.cmake  ROOTMacros.cmake  WriteConfigFile.cmake
cmake/scripts/: config.sh.in
common/: CMakeLists.txt  Hister.cxx  Hister.h  StandCommonLinkDef.h  StandDataProducer.cxx  StandDataProducer.h  StandGemGeoMapper.cxx  StandGemGeoMapper.h  StandIOManager.cxx  StandIOManager.h  StandReverseSiliconGeoMapper.cxx  StandReverseSiliconGeoMapper.h  StandSiliconGeoMapper.cxx  StandSiliconGeoMapper.h  StandStrawGeoMapper.cxx  StandStrawGeoMapper.h
decoder/: BmnRawDataDecoder.cxx  BmnRawDataDecoder.h  CMakeLists.txt  DecoderLinkDef.h
decoder/mappers/: BmnAdcProcessor.cxx  BmnAdcProcessor.h  BmnDchRaw2Digit.cxx  BmnDchRaw2Digit.h  BmnGemRaw2Digit.cxx  BmnGemRaw2Digit.h  BmnSiliconRaw2Digit.cxx  BmnSiliconRaw2Digit.h  BmnTrigRaw2Digit.cxx  BmnTrigRaw2Digit.h
doc/: INSTALL_SPECIAL  SetEnv_afs.sh  SetEnv_lxpub.sh  doxyfile.1.8.13.in  doxyfile.1.8.8.in  minispd_dependencies.txt  minispd_install.txt
executables/: CMakeLists.txt  digitsToHits.cxx  hitsToTracks.cxx  playground.cxx  rawToDigits.cxx  testMcDigitizer.cxx
hitproducer/: CMakeLists.txt  StandClustersContainer.cxx  StandClustersContainer.h  StandHitsProducer.cxx  StandHitsProducer.h  StandHitsProducerLinkDef.h  StandIOManager.cxx  StandIOManager.h  StandSiliconCluster.cxx  StandSiliconCluster.h  StandSiliconGeoMapper.h
hitproducer/hitmakers/: AbstractHitMaker.cxx  AbstractHitMaker.h  GemHitMaker.cxx  GemHitMaker.h  SiliconHitMaker.cxx  SiliconHitMaker.h
input/: GEM_map_run.txt  SILICON_map_run7.txt  SILICON_noisy_channels.txt  SILICON_pedestals_816.txt  Straw_map_Run780.txt  Straw_map_Run916.txt  TDCMinTime.txt
macro/: AdcDigitsAnalysisHist.C  DchDigitsAnalysisHist.C  DisplayStandEvent.C  SiliconDigitsAnalysisHist.C  SiliconHitsAnalysisHist.C  SimuStand.C  alignSilicons.C  analysisAlignment.C  analysisGemDigits.C  analysisGemHits.C  analysisSiliconDigits.C  analysisSiliconHits.C  analysisSiliconTracks.C  analysisStrawDigits.C  analysisTracks.C  createMockDigits.C  createRT.C  fillMilleFile.C  mergeDigitFiles.C  readRaw.C  readStrawDigits.C  rootlogoff.C  rootlogon.C  standAlignment.C  standDataToRoot.C  standDataToRoot.sh  standDigitsToHits.C  standDigitsToHits.sh  standFindStrawMinTime.C  standHitsToHisto.sh  standHitsToTracks.C  standHitsToTracks.sh  standHitsToTracksX.C  standMergeDigits.C  standSiChain.sh  standSiDigitsAnalysis.sh  standTest.sh  standTracksToHisto.C  standTracksToHisto.sh  testPipeline.sh  (+1 more)
macro/playground/: USet.C  gausSquareSum.C  testFitting.C
macro/root_files/: add.sh
macro/straw_calibration/: arin2.C  calibDT.C  libDT.C
mcdigitizer/: CMakeLists.txt  McDigitizationManager.cxx  McDigitizationManager.h  McDigitizerLinkDef.h  McHit.cxx  McHit.h
mcdigitizer/detectorDataDigitizers/: AbstractMcDataDigitizer.cxx  AbstractMcDataDigitizer.h  SiliconMcDataDigitizer.cxx  SiliconMcDataDigitizer.h
mille/: CMakeLists.txt  MilleLinkDef.h
standdata/: CMakeLists.txt  StandDataLinkDef.h  StandGemHit.cxx  StandGemHit.h  StandSiliconHit.cxx  StandSiliconHit.h  StandSiliconTrack.cxx  StandSiliconTrack.h  StandTrack.cxx  StandTrack.h
tracksproducer/: CMakeLists.txt  StandTracksProducer.cxx  StandTracksProducer.h  StandTracksProducerLinkDef.h  StandTracksProducerX.cxx  StandTracksProducerX.h
